[package]
name = "clf-parser"
version = "0.1.0"
authors = ["Ivan Kiselev <ikiselev@flowtraders.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "6.0.1"
chrono = "0.4.19"
logwatcher = "0.1"
clap = "3.0.0-beta.2"
rbl_circular_buffer = "0.1.2"
